syntax = "proto3";
package tracing.options.gloo.solo.io;

option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/options/tracing";

import "envoy/config/trace/v3/zipkin.proto";
import "envoy/config/trace/v3/datadog.proto";

import "gogoproto/gogo.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/any.proto";

option (gogoproto.equal_all) = true;
import "extproto/ext.proto";
option (extproto.hash_all) = true;


// Contains settings for configuring Envoy's tracing capabilities at the listener level.
// See here for additional information on Envoy's tracing capabilities: https://www.envoyproxy.io/docs/envoy/latest/intro/arch_overview/observability/tracing.html
// See here for additional information about configuring tracing with Gloo: https://gloo.solo.io/user_guides/setup_options/observability/#tracing
message ListenerTracingSettings {
    // Optional. If specified, Envoy will include the headers and header values for any matching request headers.
    repeated string request_headers_for_tags = 1;
    // Optional. If true, Envoy will include logs for streaming events. Default: false.
    bool verbose = 2;
    // Requests can produce traces by random sampling or when the `x-client-trace-id` header is provided.
    // TracePercentages defines the limits for random, forced, and overall tracing percentages.
    TracePercentages trace_percentages = 3;
    // Optional. If not specified, no tracing will be performed
    // Provider defines the configuration for an external tracing provider.
    Provider provider = 4;
}

// Contains settings for configuring Envoy's tracing capabilities at the route level.
// Note: must also specify ListenerTracingSettings for the associated listener.
// See here for additional information on Envoy's tracing capabilities: https://www.envoyproxy.io/docs/envoy/latest/intro/arch_overview/observability/tracing.html
// See here for additional information about configuring tracing with Gloo: https://gloo.solo.io/user_guides/setup_options/observability/#tracing
message RouteTracingSettings {
    // Optional. If set, will be used to identify the route that produced the trace.
    // Note that this value will be overridden if the "x-envoy-decorator-operation" header is passed.
    string route_descriptor = 1;
    // Requests can produce traces by random sampling or when the `x-client-trace-id` header is provided.
    // TracePercentages defines the limits for random, forced, and overall tracing percentages.
    TracePercentages trace_percentages = 2;
}

// Requests can produce traces by random sampling or when the `x-client-trace-id` header is provided.
// TracePercentages defines the limits for random, forced, and overall tracing percentages.
message TracePercentages {
    // Percentage of requests that should produce traces when the `x-client-trace-id` header is provided.
    // optional, defaults to 100.0
    // This should be a value between 0.0 and 100.0, with up to 6 significant digits.
    google.protobuf.FloatValue client_sample_percentage = 1;
    // Percentage of requests that should produce traces by random sampling.
    // optional, defaults to 100.0
    // This should be a value between 0.0 and 100.0, with up to 6 significant digits.
    google.protobuf.FloatValue random_sample_percentage = 2;
    // Overall percentage of requests that should produce traces.
    // optional, defaults to 100.0
    // This should be a value between 0.0 and 100.0, with up to 6 significant digits.
    google.protobuf.FloatValue overall_sample_percentage = 3;
}

// Contains settings for configuring Envoy's HTTP tracer provider
// See here for additional information on Envoy's tracer provider: https://www.envoyproxy.io/docs/envoy/latest/api-v3/config/trace/v3/http_tracer.proto#envoy-v3-api-msg-config-trace-v3-tracing-http
message Provider {
    // Required. The name of the HTTP trace driver to instantiate. The name must match a supported HTTP trace driver.
    // Built-in trace drivers:
    //  envoy.tracers.lightstep
    //  envoy.tracers.zipkin
    string name = 1;
    // Trace driver specific configuration which depends on the driver being instantiated.
    // See the trace drivers for examples: https://www.envoyproxy.io/docs/envoy/latest/api-v3/config/trace/trace
    oneof typed_config {
        ZipkinConfig zipkin_config = 1;

        DatadogConfig datadog_config = 2;
    }
}
